#1 Add some checklist pages and update home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,34 +7,34 @@ layout: default
     <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
       <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"/></svg>
     </div>
-    <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-    <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-    <a href="#" class="btn btn-dark">
-      Primary button
+    <h3 class="fs-2 text-body-emphasis">Morning Routine</h3>
+    <p>Common things to do for a morning routine.</p>
+    <a href="{{ site.github.url }}/c/morning-routine" class="btn btn-dark">
+      Read more
     </a>
   </div>
   <div class="feature col">
     <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
       <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"/></svg>
     </div>
-    <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-    <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-    <a href="#" class="btn btn-dark">
-      Primary button
+    <h3 class="fs-2 text-body-emphasis">Evening Routine</h3>
+    <p>Common things to do for an evening routine.</p>
+    <a href="{{ site.github.url }}/c/evening-routine" class="btn btn-dark">
+      Read more
     </a>
   </div>
   <div class="feature col">
     <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
       <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"/></svg>
     </div>
-    <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-    <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-    <a href="#" class="btn btn-dark">
-      Primary button
+    <h3 class="fs-2 text-body-emphasis">Travel Checklist</h3>
+    <p>a comprehensive travel checklist covering various aspects of your trip.</p>
+    <a href="{{ site.github.url }}/c/travel-checklist" class="btn btn-dark">
+      Read more
     </a>
   </div>
 </div>
-
+<!--
 <div class="row g-4 row-cols-1 row-cols-lg-3 pb-5">
   <div class="feature col">
     <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
@@ -67,3 +67,4 @@ layout: default
     </a>
   </div>
 </div>
+-->
