--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,4 +2,8 @@
 layout: default
 ---
 
-{{ content }}
+<div class="row g-5 mb-5">
+    <div class="col-md-6">
+        {{ content }}
+    </div>
+</div>
