--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="row g-5 mb-5">
+<div class="row g-5 mb-5 lh-lg">
     <div class="col-md-6">
         {{ content }}
     </div>
