--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,8 @@ layout: default
 ---
 
 <div class="row g-5 mb-5 lh-lg">
-    <div class="col-md-6">
+    <div class="col-md-9 mx-auto">
+        <h1 class="fw-bold">{{ page.title }}</h1>
         {{ content }}
     </div>
 </div>
