#1 Update styling and formatting

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: default
     <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
       <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"/></svg>
     </div>
-    <h3 class="fs-2 text-body-emphasis">Morning Routine</h3>
+    <h3 class="fs-2 fw-bold text-body-emphasis">Morning Routine</h3>
     <p>Common things to do for a morning routine.</p>
     <a href="{{ site.github.url }}/c/morning-routine" class="btn btn-dark">
       Read more
@@ -17,7 +17,7 @@ layout: default
     <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
       <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"/></svg>
     </div>
-    <h3 class="fs-2 text-body-emphasis">Evening Routine</h3>
+    <h3 class="fs-2 fw-bold text-body-emphasis">Evening Routine</h3>
     <p>Common things to do for an evening routine.</p>
     <a href="{{ site.github.url }}/c/evening-routine" class="btn btn-dark">
       Read more
@@ -27,7 +27,7 @@ layout: default
     <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
       <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"/></svg>
     </div>
-    <h3 class="fs-2 text-body-emphasis">Travel Checklist</h3>
+    <h3 class="fs-2 fw-bold text-body-emphasis">Travel Checklist</h3>
     <p>a comprehensive travel checklist covering various aspects of your trip.</p>
     <a href="{{ site.github.url }}/c/travel-checklist" class="btn btn-dark">
       Read more
