--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,5 +8,5 @@
     <link rel="apple-touch-icon" sizes="152x152" href="/assets/apple-icon-152x152.png">
     <link rel="shortcut icon" href="/assets/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
-  </head>  
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+  </head> 
