--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,38 +2,50 @@
 layout: default
 ---
 
-<div class="row g-4 row-cols-1 row-cols-lg-3 pb-5">
-  <div class="feature col">
-    <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-      <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"/></svg>
+<div class="container">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 pb-5">
+    <div class="col">
+      <div class="card shadow-sm">
+        <div class="card-body">
+          <h3 class="fs-2 fw-bold text-body-emphasis card-title">Morning Routine</h3>
+          <p class="card-text">Common things to do for a morning routine.</p>
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="btn-group">
+              <a href="{{ site.github.url }}/c/morning-routine" class="btn btn-sm btn-dark">View</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <h3 class="fs-2 fw-bold text-body-emphasis">Morning Routine</h3>
-    <p>Common things to do for a morning routine.</p>
-    <a href="{{ site.github.url }}/c/morning-routine" class="btn btn-dark">
-      Read more
-    </a>
-  </div>
-  <div class="feature col">
-    <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-      <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"/></svg>
+    <div class="col">
+      <div class="card shadow-sm">
+        <div class="card-body">
+          <h3 class="fs-2 fw-bold text-body-emphasis card-title">Evening Routine</h3>
+          <p class="card-text">Common things to do for an evening routine.</p>
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="btn-group">
+              <a href="{{ site.github.url }}/c/evening-routine" class="btn btn-sm btn-dark">View</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <h3 class="fs-2 fw-bold text-body-emphasis">Evening Routine</h3>
-    <p>Common things to do for an evening routine.</p>
-    <a href="{{ site.github.url }}/c/evening-routine" class="btn btn-dark">
-      Read more
-    </a>
-  </div>
-  <div class="feature col">
-    <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-      <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"/></svg>
+    <div class="col">
+      <div class="card shadow-sm">
+        <div class="card-body">
+          <h3 class="fs-2 fw-bold text-body-emphasis card-title">Travel Checklist</h3>
+          <p class="card-text">A comprehensive travel checklist covering various aspects of your trip.</p>
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="btn-group">
+              <a href="{{ site.github.url }}/c/travel-checklist" class="btn btn-sm btn-dark">View</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <h3 class="fs-2 fw-bold text-body-emphasis">Travel Checklist</h3>
-    <p>a comprehensive travel checklist covering various aspects of your trip.</p>
-    <a href="{{ site.github.url }}/c/travel-checklist" class="btn btn-dark">
-      Read more
-    </a>
   </div>
-</div>
+</div>  
+
 <!--
 <div class="row g-4 row-cols-1 row-cols-lg-3 pb-5">
   <div class="feature col">
