#1 Add jumbotron for home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,14 @@
 layout: default
 ---
 
+<div class="p-5 mb-5 bg-body-tertiary rounded-3 bg-light">
+  <div class="container-fluid py-5">
+    <h1 class="display-5 fw-bold">Never miss anything important</h1>
+    <p class="col-md-8 fs-4">Checklists are a proven tool for getting things done the right way.</p>
+    <a href="{{ site.github.url }}/" class="btn btn-lg btn-dark">Get Started</a>
+  </div>
+</div>
+
 <div class="container">
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 pb-5">
     <div class="col">
