#1 Update site to link to Vue application

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
   <div class="container-fluid py-5">
     <h1 class="display-5 fw-bold">Never miss anything important</h1>
     <p class="col-md-8 fs-4">Checklists are a proven tool for getting things done the right way.</p>
-    <a href="{{ site.github.url }}/" class="btn btn-lg btn-dark">Get Started</a>
+    <a href="https://app.cheqist.com/" class="btn btn-lg btn-dark">Get Started</a>
   </div>
 </div>
 
